# NeuroForge

./: .gitignore  CHANGELOG.md  LICENSE  Plan.txt  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  start_ui.bat  start_ui.ps1
bizhawk/: neuroforge_bridge.lua
configs/agents/: default.toml
configs/logic/: logic_gates_with_backbone_tiny.json
configs/neuroevolution/: default.toml
configs/smb3/: default.toml
configs/vision/: mnist_lifconv_v1.json  mnist_lifconv_v1_stronger.json
docs/: ARCHITECTURE.md  BIZHAWK_SETUP.md
docs/architecture/: agent_game_architecture.md  biological_modeling.md  evolution.md  learning_boundaries.md  messaging.md  simulation_construction.md
examples/custom_agent/: simple_agent.py
examples/custom_brain/: simple_brain.py
examples/custom_environment/: simple_environment.py
examples/custom_hyperneat_substrate/: substrate_config.py
examples/custom_neat_genome/: seed_policy_genome.py
examples/smb3/: train_minimal.py
scripts/: calibrate_smb3_hud.py  evaluate_smb3_checkpoint.py  evolve_smb3.py  generate_smb3_atlas.py  smb3_architecture_suite.py  smb3_env.py  smb3_evolved_config.py  smb3_full_suite.py  smb3_suite_common.py  smoke_bizhawk.py  train_smb3.py  visualize_features.py
scripts/bizhawk/: neuroforge_bridge.lua
src/neuroforge/: __init__.py
tests/: __init__.py  conftest.py
tests/acceptance/: test_bench_smoke.py  test_logic_gates.py  test_logic_gates_backbone_vision_smoke.py  test_multi_gate.py  test_stability_multi_seed.py  test_vision_bench_smoke.py  test_vision_nmnist_cli_smoke.py  test_vision_smoke.py
tests/unit/: test_active_edge_filter.py  test_agent_game_architecture.py  test_artifact_writer.py  test_artifact_writer_scalars_header.py  test_biology_imports.py  test_bizhawk_bridge.py  test_clock.py  test_contracts_importable.py  test_cuda_monitor.py  test_cuda_smoke.py  test_curriculum.py  test_dales_law.py  test_dashboard_server_port.py  test_dataset_factory.py  test_delayed_static_synapse.py  test_determinism.py  test_encoding.py  test_encoding_readout_imports.py  test_engine.py  (+64 more)
(+500 files in other folders)
