[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "neuroforge"
version = "0.1.0"
description = "A biologically inspired spiking liquid brain simulation toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "NeuroForge Contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
torch = ["torch>=2.3", "numpy>=1.26"]
vision = ["torchvision>=0.18"]
events = ["tonic>=1.5"]
dashboard = ["aiohttp>=3.9"]
monitoring = ["psutil>=5.9", "nvidia-ml-py>=11.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.10",
    "pyright",
    "types-setuptools",
    "aiohttp>=3.9",
]

[project.scripts]
neuroforge = "neuroforge.runners.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroforge"]

# ── ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 99
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["neuroforge"]

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["neuroforge", "tests"]

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp", "aiohttp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "_pytest", "_pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
